[gd_scene load_steps=12 format=3 uid="uid://dr4m8snnunohw"]

[ext_resource type="Theme" uid="uid://cehwwyyuxm3u1" path="res://assets/theme/game_theme.tres" id="1_0j2s3"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="2_1hx08"]
[ext_resource type="Texture2D" uid="uid://c0cq45a3oj3ay" path="res://assets/ui/controls.PNG" id="3_45ajy"]
[ext_resource type="Texture2D" uid="uid://5ffhuqvvqc7t" path="res://assets/theme/red_button_rectangle_depth_gradient.png" id="3_m1o5j"]
[ext_resource type="Texture2D" uid="uid://blg1tpdom2a0y" path="res://assets/theme/red_button_rectangle_flat.png" id="4_wa12k"]
[ext_resource type="Texture2D" uid="uid://c2f37xgmirgoa" path="res://assets/theme/red_button_rectangle_depth_flat.png" id="5_mtob2"]
[ext_resource type="Shader" path="res://pause_menu.gdshader" id="7_y1hse"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_33q3i"]
shader = ExtResource("7_y1hse")
shader_parameter/amount = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ebhb0"]
texture = ExtResource("3_m1o5j")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8yo86"]
texture = ExtResource("4_wa12k")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0mcem"]
texture = ExtResource("5_mtob2")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4
theme = ExtResource("1_0j2s3")
script = ExtResource("2_1hx08")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_33q3i")
layout_mode = 1
offset_left = -293.0
offset_top = -166.0
offset_right = 294.0
offset_bottom = 167.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.5
offset_top = -107.0
offset_right = 239.5
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="Controls" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_45ajy")

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_ebhb0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8yo86")
theme_override_styles/normal = SubResource("StyleBoxTexture_0mcem")
text = "MAIN MENU"

[connection signal="mouse_entered" from="VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
